<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2020 - UMons

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textMargin"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/click_logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <EditText
                android:id="@+id/userName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/textPadding"
                android:layout_margin="@dimen/textMargin"

                android:inputType="text"
                android:autofillHints="username"
                android:hint="@string/user_name" />

            <EditText
                android:id="@+id/ipAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/textPadding"
                android:layout_margin="@dimen/textMargin"

                android:inputType="textUri"
                android:importantForAutofill="no"
                android:hint="@string/ip_server" />

            <EditText
                android:id="@+id/portAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/textPadding"
                android:layout_margin="@dimen/textMargin"

                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:hint="@string/port_server" />

            <EditText
                android:id="@+id/sessionKey"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/textMargin"
                android:hint="@string/session_key_server"

                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/textPadding" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="#AADDDDDD"
            android:visibility="visible"
            android:orientation="vertical"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_gravity="bottom"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/textMargin"

        android:text="@string/config_button" />

</LinearLayout>