<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2020 - UMons

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/textMargin"
        android:layout_weight="1"
        android:background="@color/image_borders"
        android:gravity="center"
        android:scaleType="center"
        android:padding="@dimen/imagePadding"
        android:src="@drawable/ic_image_black_24dp"
        />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_picture"
        android:layout_marginHorizontal="@dimen/textMargin"
        android:layout_marginTop="@dimen/textMargin"/>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:layout_marginHorizontal="@dimen/textMargin"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_forward_black_24dp"
        android:text="@string/next_picture_button"
        android:layout_margin="@dimen/textMargin"/>
</LinearLayout>