<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2020 - UMons

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes_title"
        android:textSize="15sp"
        android:layout_marginHorizontal="@dimen/textMargin"
        android:layout_marginTop="@dimen/textMargin"
        android:labelFor="@+id/editNotesTitle"
        />

    <EditText
        android:id="@+id/editNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginHorizontal="@dimen/textMargin"
        android:inputType="textAutoCorrect"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes_content"
        android:textSize="15sp"
        android:layout_marginHorizontal="@dimen/textMargin"
        android:layout_marginTop="@dimen/textMargin"
        android:labelFor="@+id/editNotesContent" />

    <EditText
        android:id="@+id/editNotesContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine|textAutoCorrect"
        android:layout_marginHorizontal="@dimen/textMargin"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_notes_button"
        android:drawableEnd="@drawable/ic_done_black_24dp"
        android:layout_margin="@dimen/textMargin" />

</LinearLayout>